--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- SEO acisindan onemli (165 karater uzunluğunda bir aciklama) -->
+    <meta name="description" content="Dünyanın en iyi kalemleri cw-kalem" />
     <title>Recap</title>
   </head>
   <body>
-    <h1>Merhaba FullStack 14</h1>
+    <h1>Bu bir H1 etiketidir</h1>
+    <h2>Bu bir H2 etiketidir</h2>
+    <h3>Bu bir H3 etiketidir</h3>
+    <h4>Bu bir H4 etiketidir</h4>
+    <h5>Bu bir H5 etiketidir</h5>
+    <h6>Bu bir H6 etiketidir</h6>
   </body>
 </html>
