--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- SEO acisindan onemli (165 karater uzunluğunda bir aciklama) -->
     <meta name="description" content="Dünyanın en iyi kalemleri cw-kalem" />
-    <link rel="shortcut icon" href="favicon. ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
+
     <title>Recap</title>
   </head>
   <body>
