--- a/index.html
+++ b/index.html
@@ -54,5 +54,14 @@
         distinctio laudantium? Ratione, asperiores?
       </p>
     </div>
+    <section>
+      Lorem ipsum <mark>dolor</mark> sit amet <u>consectetur</u> adipisicing
+      elit. Earum deserunt neque aut, <del>nihil</del> suscipit provident
+      assumenda <strong>architecto</strong> deleniti ducimus, dolor ab atque
+      cumque rerum magni ipsum impedit! Fugiat, consectetur <em>error</em> ?
+    </section>
+
+    <br />
+    <article>Bu ürünün fiyatı <span style="color: red"> 500 TL</span></article>
   </body>
 </html>
