--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       /* internal CSS */
       .par {
         /* class ile erisim */
-        color: red;
-        background-color: white;
+        color: white;
+        background-color: red;
       }
       #container {
         /* id ile erisim */
@@ -59,9 +59,14 @@
       elit. Earum deserunt neque aut, <del>nihil</del> suscipit provident
       assumenda <strong>architecto</strong> deleniti ducimus, dolor ab atque
       cumque rerum magni ipsum impedit! Fugiat, consectetur <em>error</em> ?
+
+      <br />
+      <article>
+        Bu ürünün fiyatı <span style="color: red"> 500 TL</span>
+      </article>
     </section>
 
-    <br />
-    <article>Bu ürünün fiyatı <span style="color: red"> 500 TL</span></article>
+    <p>Suyun formülü H<sub>2</sub>0</p>
+    <p>Formül x<sup>2</sup>+ 3</p>
   </body>
 </html>
