--- a/links.html
+++ b/links.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Links</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>LINKS</h1>
 
     <a href="https://clarusway.com" target="_blank"> Clarusway Web Site </a>
 
     <p><a href="index.html">Birinci Calisma</a></p>
-</body>
+
+    <a href="https://clarusway.com">
+      <img
+        src="https://cdn.pixabay.com/photo/2023/04/06/01/26/heart-7902540_640.jpg"
+        alt="nature image"
+        width="300px"
+      />
+    </a>
+
+    <div>
+      <img src="./img/river.webp" width="300px" alt="river" />
+    </div>
+
+    <a href="./img/bird.webp" download>Resmi indirmek için tıklayınız</a>
+
+    <p><a href="tel:+905555555">Ara 905555555</a></p>
+    <p><a href="mailto:noah@cw.com">Mail için tiklayiniz</a></p>
+  </body>
 </html>
