--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
     <title>Links</title>
   </head>
   <body>
-    <h1>LINKS</h1>
+    <h1 id="baslangic">LINKS</h1>
 
     <a href="https://clarusway.com" target="_blank"> Clarusway Web Site </a>
 
@@ -28,5 +28,58 @@
 
     <p><a href="tel:+905555555">Ara 905555555</a></p>
     <p><a href="mailto:noah@cw.com">Mail için tiklayiniz</a></p>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum esse ipsam,
+      reprehenderit dolor temporibus eos provident labore repellendus quo
+      distinctio sint voluptas doloremque minima nihil iste fugiat placeat
+      accusantium nam, aspernatur impedit ullam quos voluptatem cupiditate
+      praesentium. Rem fugiat cum veritatis inventore iusto in quasi temporibus
+      rerum sed natus dolores odit ipsa magnam exercitationem consequatur sequi
+      molestias, nobis accusantium eius. Excepturi neque eligendi reiciendis at
+      repellat est possimus nisi, quis totam ad iste natus ratione unde dolorem,
+      cumque praesentium. Dolore voluptas blanditiis unde repudiandae dolorem at
+      labore molestiae porro, quo tempore assumenda iure non optio consequuntur,
+      veniam dolores dolorum fugiat esse vero dicta. Iure ratione quod veritatis
+      voluptatibus consequatur, aliquam doloribus voluptatem deleniti voluptates
+      possimus porro totam? Asperiores praesentium natus laborum fugit quia?
+      Omnis atque eligendi quis accusamus perspiciatis a saepe nisi mollitia, ad
+      voluptate accusantium quod illo? Distinctio facilis exercitationem maiores
+      eaque minima non incidunt quod necessitatibus provident. Quidem dolorum
+      vitae tenetur laborum doloremque doloribus, quod, unde ab nam totam
+      facilis aliquam! Sit earum unde molestiae, corrupti dolore dolores,
+      repudiandae delectus qui voluptas odit quisquam ipsa illo sapiente minima
+      excepturi sed voluptates odio eligendi, ducimus minus reiciendis aut
+      debitis! Rerum, officia explicabo. Accusantium cum consectetur minima.
+      Nam, amet quibusdam!
+    </p>
+
+    <br /><br />
+
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia magni
+      odio, accusantium voluptatibus sit eveniet, architecto totam dicta fuga
+      sint, ipsa eius est amet consectetur molestias. Alias debitis veritatis
+      possimus necessitatibus nemo quos dolorem dignissimos magni officiis quis
+      voluptatem aspernatur animi odio, aliquid quo sit, nihil rem earum. Culpa
+      ipsa, beatae magnam doloremque animi itaque? Ratione explicabo itaque sit,
+      voluptates, nostrum accusantium aliquid deleniti tempore neque praesentium
+      inventore ea blanditiis molestias architecto id atque iste quas quibusdam
+      doloribus minima at consequatur cupiditate hic. Saepe nostrum aliquam
+      numquam excepturi aspernatur voluptas, accusamus porro ipsum corporis! Eum
+      quam fuga voluptatem cum rem repellendus voluptas reiciendis inventore,
+      dolore perspiciatis, enim deleniti mollitia earum aperiam? Nemo placeat
+      alias natus. Saepe quae laborum quos dolore sapiente eos expedita esse,
+      vero excepturi inventore porro eum doloribus fuga alias est? Asperiores
+      magnam, id, nesciunt optio similique nulla iste doloremque suscipit
+      aperiam error placeat sit labore, alias vero dolore voluptatem tenetur.
+      Ipsam facere ex, delectus repellendus magni voluptates cum ea quidem totam
+      saepe nobis dicta laboriosam officia praesentium, dolores eaque doloribus
+      sapiente alias debitis dolorem odit! Blanditiis voluptas porro corporis
+      suscipit esse accusamus soluta quidem rerum? Provident voluptatem maiores
+      impedit eum eius sed vitae repudiandae sapiente eaque exercitationem.
+    </p>
+
+    <a href="#baslangic">Başa Git</a>
   </body>
 </html>
